<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="EM_Machine_STS" Id="{a965e443-8a73-49b4-a793-c91583ea76c1}">
    <Declaration><![CDATA[TYPE EM_Machine_STS :
STRUCT
	State 			: E_State_PackML;
	Auto 			: BOOL;
	Manueel 		: BOOL;
	Starting_SC 	: BOOL;
	Execute_SC 		: BOOL;
	Resetting_SC 	: BOOL;
	Holding_SC 		: BOOL;
	Unholding_SC 	: BOOL;
	Suspending_SC	: BOOL;
	Unsuspending_SC	: BOOL;
	Aborting_SC		: BOOL;
	Clearing_SC		: BOOL;
	Stopping_SC		: BOOL;
	Completing_SC	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>